# satisfactory-storage

./: README.md  items.csv  main.py  pyproject.toml
